--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -4,9 +4,9 @@
 }
 
 .background-logo{
-    width: 100%;
-    height: 100px;
-    background-color: #cdff7c ;
+    width: 150%;
+    height: 50px;
+    background-color: #dbb6b6 ;
     position: relative;
 }
 
@@ -15,8 +15,8 @@
     background-size: cover;
     display: block;
     margin-left: 20px;
-    width: 200px;
-    height: 100px;
+    width: 100px;
+    height: 50px;
     background-size: cover;
 }
 
