--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -3,20 +3,25 @@
     margin: 0;
 }
 
+body{
+    height: 100%;
+    margin: 0;
+}
+
 .background-logo{
-    width: 150%;
-    height: 50px;
-    background-color: #dbb6b6 ;
+    width: 100%;
+    height: 60px;
+    background-color: #dbba61 ;
     position: relative;
 }
 
 .background-logo a {
-    background-image: url(../assets/img/Robótica\ Sustentável\ png.png);
+    background-image: url(../assets/img/Robótica\ Sustentável\.png);
     background-size: cover;
     display: block;
-    margin-left: 20px;
-    width: 100px;
-    height: 50px;
+    margin-left: 10px;
+    width: 200px;
+    height: 60px;
     background-size: cover;
 }
 
@@ -24,11 +29,6 @@
     margin-left: 20px;
     width: 160px;
     height: 100px;
-}
-
-body{
-    height: 100%;
-    margin: 0;
 }
 
 .container{
@@ -43,4 +43,13 @@ body{
     margin: 20px;
     width: 100%;
     height: 500px;
+}
+
+.robotica{
+    width: 1005;
+    margin: 20px;
+}
+
+.robotica img {
+    width: 100%;
 }
