--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -6,32 +6,42 @@
 body{
     height: 100%;
     margin: 0;
+    background-color: #faf1d2;
 }
 
-.background-logo{
-    width: 100%;
-    height: 60px;
-    background-color: #dbba61 ;
-    position: relative;
+header {
+	display: flex;
+	justify-content: space-between;
+	padding: 25px;
+    background-color: #dbba61;
+    height: 40px;
 }
 
-.background-logo a {
-    background-image: url(../assets/img/Robótica\ Sustentável\.png);
-    background-size: cover;
-    display: block;
-    margin-left: 10px;
-    width: 200px;
-    height: 60px;
-    background-size: cover;
+header .logo-robotica{
+	width: 200px;
+	transition: 0.2s ease-in-out;
+    margin-bottom: 20px;
 }
 
-.logo{
-    margin-left: 20px;
-    width: 160px;
-    height: 100px;
+header .imagem-botao{
+    width: 40px;
+    height: 35px;
+    transition: 0.2s ease-in-out;
+    margin-top: 5px;
 }
 
-.container{
+header .logo-robotica:hover{
+	transform: scale(1.05);
+	cursor: pointer;
+}
+
+header .imagem-botao:hover{
+    transform: scale(1.2);
+    cursor: pointer;
+}
+
+
+.container-video{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,11 +55,28 @@ body{
     height: 500px;
 }
 
-.robotica{
+.robotica-banner{
     width: 1005;
     margin: 20px;
 }
 
-.robotica img {
+.robotica-banner img {
     width: 100%;
+}
+
+.botoes{
+    margin: 30px;
+    padding: 35px;
+}
+
+.botoes img{
+    padding: 25px;
+}
+
+.animacao-botao{
+    transition: 0.2s ease-in-out;
+}
+.animacao-botao:hover{
+	transform: scale(1.05);
+	cursor: pointer;
 }
