--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,6 +1,6 @@
 *{
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
 }
 
 .background-logo{
@@ -43,4 +43,14 @@ body{
     margin: 20px;
     width: 100%;
     height: 500px;
+}
+
+.caixa-logo {
+    position: relative;
+    width: 160px;
+    height: 100%;
+}
+
+.titulo-principal {
+	padding-left: 50px;
 }
